--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,8 @@
 {
     "version": 2,
-    "name": "my-backend",
     "builds": [
       {
-        "src": "*.js",
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
@@ -12,6 +11,10 @@
         "src": "/(.*)",
         "dest": "/index.js"
       }
-    ]
+    ],
+    "env": {
+      "NODE_ENV": "production",
+      "ANOTHER_ENV_VAR": "value"
+    }
   }
   
